

*****  Tue Sep 26 21:01:11 CEST 2017  *****

Cleaned up the disk.py and cdisk.c functions.


*****  Sun Oct  1 15:04:01 CEST 2017  *****

Sorted up gaussian, made it its own module inside the center module.

*****

Implemented center-of-light calculation into center module.

*****

Implemented center driver.py routine.


*****  Sun Oct  8 22:55:49 CEST 2017  *****

Got pup_center running (yay!).
Added temporary calling sequence to pup_center.
Fixed minor bug in center/driver.py for least-asym calls.
Tweaked main driver (removed parse() def).
Put user-input dict (from config files) into pup.inputs.


*****  Sat Oct 21 18:56:15 CEST 2017  *****

Rewrote disk C extension, moving most of the work into the cdisk.h
header, such it can be called from other C extentions.


*****  Fr 27. Okt 17:23:32 CEST 2017  *****

Implemented and documented the low-level aperture photometry routine
in aphot.c (a C extension).

*****

Incorporated aperture photometry in the puppies.photometry submodule.


*****  Sun Oct 29 17:05:52 CET 2017  *****

Implemented aperture photometry module.
Optimal photometry is TBI.

*****

Renamed centering's expand input to psfscale (pixel scale ratio
between the PSF and data images) to avoid conflict with photometry's
expand interpolating factor.


*****  Sat Nov  4 11:59:41 CET 2017  *****

Added some extra information about the Spitzer bad-pixel-mask bits,
still not completely sure it's the right one.


*****  Sun Nov 12 20:47:00 CET 2017  *****

Revampled spitzer.py to handle time stamps with astropy.time objects
for the ephtime and fp.time values.  This simplifies the light
travel time corrections, bjd-utc corrections, phase calculation.
The pipeline now takes the spacecraft location from the headers
instead of the horizons file.
All of these calculation are now in Spitzer.py rather than after
the photometry step.

Also, revamped the main object's FrameParameter from 2D into 1D.
This commit breaks all further steps of the pipeline.

*****
